# ChangeLog for media-video/mplayer2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer2/ChangeLog,v 1.94 2013/04/27 17:47:58 scarabeus Exp $

  16 May 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +mplayer2-2.0_p20130126.ebuild, +files/generate-tarball.sh,
  +files/mplayer2-giflib5.patch, +files/mplayer2-py2compat.patch,
  +metadata.xml:
  Add fix for building against giflib5.

  27 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> mplayer2-9999.ebuild:
  Move the ebuild to python-r1 eclasses. Sync with mpv ebuild. Patch by Nikoli.

  16 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Remove redundant maintainer field for media-video

  16 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> mplayer2-9999.ebuild:
  Adjust ffmpeg dependency in live ebuild by maintainer's request

  16 Apr 2013; Sergey Popov <pinkbyte@gentoo.org>
  mplayer2-2.0_p20130126.ebuild, mplayer2-9999.ebuild:
  Adjust cdio dependency by maintainer's request

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*mplayer2-2.0_p20130126 (01 Feb 2013)

  01 Feb 2013; Maxim Koltsov <maksbotan@gentoo.org>
  +mplayer2-2.0_p20130126.ebuild, mplayer2-9999.ebuild:
  Add new snapshot, update live ebuild, thanks to Nikoli

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> mplayer2-2.0_p20120828.ebuild:
  Stable for x86, wrt bug #447932

  16 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
  mplayer2-2.0_p20121128.ebuild,
  +files/mplayer2-2.0_p20121128-cdio-api-fixes.patch:
  Fix compability with libcdio-paranoia wrt #452450

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> mplayer2-2.0_p20120828.ebuild:
  Stable for arm, wrt bug #447932

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> mplayer2-2.0_p20120828.ebuild:
  Stable for alpha, wrt bug #447932

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> mplayer2-2.0_p20120828.ebuild: