@@ -4,24 +4,24 @@ Hash: SHA256
 AUX generate-tarball.sh 964 SHA256 077e84f976f872ad440e6d5f26908787cbbe61eb4fc6b75c8b92752acae02b06 SHA512 03d3fba5b1943a54c0402199b3d5767f1f81f71420af422286abdd1983cb470642dd8568b68fd8bbb64d8c62489e70e9b9fa3c327f10f27fcc9e685eb0151baf WHIRLPOOL fe263a2ec4455f5f97c0dfa3cf8f8a9cbc208920ab6f9c0825c673764ad6e88e97b0d5371f1e83528973eb501b3a4d39c6c708c4cdef869cc759e317f3b43a43
 AUX mplayer2-giflib5.patch 6971 SHA256 49380b94d73a3aadaba4bef46343229bfc07030b3a4f8eeb6ca001b273db0be3 SHA512 aa0c7120837f189c0691852becb2efa159defe4d2b947ed283420a4d0ea7bf320f627095aa98868366f297e64e7ba4305c889b1c8b290cefe402e567a4bf232c WHIRLPOOL fbcfcd55ed90e69ed6ccd7a8c52e5146177c66ba9e9a8e38d576116ccf8b8c6172dd10520a0710840898208e20d7d9040db654a148cd0f9d7962715b1b5cc9be
 AUX mplayer2-py2compat.patch 2179 SHA256 36e26a89ec03de0e349443ca3ce07c58e408e032200f49c3ce849691589a1cc7 SHA512 a90417c923c36c78d4c8053de89b26f69cd29a01ee37028360c8c564b903ee00ac0d7e98bcaf25220998951f25987cd89ede47b54518736c14abd1e7153e6568 WHIRLPOOL 987c63235be05fd3dbe89e4e291649c6f2176771e07c8515c08725a4e3d54118136b968531565a65c1e83bd754cc51e9bef5493ec2e653dfa4b3278c8bed6cce
-DIST mplayer2-2.0_p20130126.tar.xz 1914780 SHA256 ed68090e1ed2698132065ab4567e2920a6fb9f2f0868efc172f612d6848919f5 SHA512 b54780a0a45619ababf874fe40797a6c73c4adea26469178bbd5bf3396cd1977631622a8e150c02b650cf4a415d1e5d80943fda1e50935d921328022187b65dc WHIRLPOOL b1876eece2223d1b1281aeb1043c1f436c518363a2e720a2eb6be92853cac3ed0dce16b3c4300acffe4746925831ccfddcc24553d5fdcac4cce385701d5625bf
-EBUILD mplayer2-2.0_p20130126.ebuild 12515 SHA256 03f3b6db315247b8aeddd64cc23ad8dde4d768e1df52f9939e1d9c48d88f54f4 SHA512 64cbfa76e23e95100049e87f37326e3e2add16ba7cdb89ea31cd1577d372c26562f6dec58cff72c84be4f114c5c85b39867f8b85a870df307bbfcf1fbe4408ec WHIRLPOOL 4e6cb821253dbe35622366449626e37fb79ffd73e8cf82e83e568739c8fef220eee24fcc3c5dde4a67e10a9c66b3dbcec1f22c2c535bf8e3ce96d87c2f0e1fd9
-MISC ChangeLog 18459 SHA256 b6ab652cbba54b288204c84e851410dd9d08646da6eef7c1834e9abba7769468 SHA512 fa6a35891ca5cd478cf08b064e00a9e5acb41fd284efb6961a76eaeb3971a1afd920303554ea6c777569e81016cb426f0cb6c474f6e83f0823466cd7f68c884e WHIRLPOOL 130c1c8f86cfa9d76d51ed70a178f2001b23ac9bddcc50a92fd53f2e592b1e86d9afb68470a79fe4bf7acf2f02d4196621ce27fd64cbe2bb2ac3496b6c2c6d59
+DIST mplayer2-2.0_p20130428.tar.xz 1911464 SHA256 41e54e6c86761196e111250fd6db79161bfd08f2cccf7d624e9b25b038fdf6c0 SHA512 da0101736b76535d38b1063c3ec7054003c8013f24df949bac26d51deebb41fcb6116af35d3b49bd6d9c1cc76842ab58c8e049a42e70dc5694058e3e6ed44bd8 WHIRLPOOL f97620ec26483e498d21b75fb533d09e41542ca18bb6a5a535c40c33fad34f745966f10a001026766610b6e40754dcecab3dc6292c00532437d2a92cb8d21079
+EBUILD mplayer2-2.0_p20130428-r1.ebuild 10422 SHA256 4332cb8ce7e0053224fd378094ecd56324a9fbdca2c56612319274f8ea6abef1 SHA512 0c1156e5e6e2aa1a64528adb5a99e3c6be80c8e9a50f94caa510fcc7985ef86ef05c5660461550a9c8450ff4cbb82b5b954107ba65cccf5fc2b7025d2d220d01 WHIRLPOOL 192a713a245776ace18d7b4b32760f61e5ef159f0208a0f35b2a7125cbcb647fdac6c5771eaf21d62c81fbf15edc421929e244ce6ff255e97a972cf8a84e2a6f
+MISC ChangeLog 18669 SHA256 efc3feb98fe65bf5c89be08566d29200450bda785f188a4982af1e5f6024d4a3 SHA512 c3eb7ac32cb0e720d8373145264dfec9e80c4ea0156c9a545515c402fe7509ddb9bf2668eaad9ab4f8613fe85b8ddee29067c450e8d285b4b1f5fab5d896d3eb WHIRLPOOL 48da7cb491fab4ee13725509fb1487b64e6227cfcf11031ab27f48eb02aa05af1db420cadf932c40af38586bf9f9e4247b0fe444043295907a5e2f2a824fdc76
 MISC metadata.xml 3397 SHA256 5e3414f08089179b422c3f2184e673866e735fcfe7d5514dbe220be61cc1f87b SHA512 1806b9e66fd9602c0d7be01af6869f3b8688964d8d3db4f65c8e0280e583619e2a408a4def31653b72963f97f76e0883803b65dc9d62d8a2432df3f58b88ac99 WHIRLPOOL f5acda8923fcb98e70d22e9c037c7d5bf066c94c65f5fa4f6b10c27b1c62ad9f9904aabda5f3f04140bc354e9f1b4aee9f9c5d8f17f305ba502ea8e51d28214f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRlJfIAAoJEDuWpXgki9wHIrsQAJyxLZhLD9287qJF50JIyRGK
-OEvv/5Lu9W4dCUXoppsjbkwb7/tCdGGSH0M4GBCGG+vYTKcigdkFzzL/EHndxppQ
-owp7ebx4sq70AcAsT4VSRpvNWuI3NuuSH/2Ri4qzrl99EGPqdx1FpDTqjFBEMsbn
-JGEf2lZy8B6zPMo0WRbvT77tGtg0OzuaxWxpt1pHRmxduG2OcahAhEU1YfYL2Riu
-pxopQuUdKlqDCu7Exj6qhPzsYkPc7j98KVgZehLfNjn24SbSEoU7hhQM5sIEDZhH
-kbyMJdhcVX6V1C+/JXXSXmrLPpdOM/RxWxsOgJY/2ZR7+YYY6RnujzIbsLIr/kBl
-rUjxGXwof5eXQnmLEFe1Ik5SVtH06BPeHcGg4CcWpBIOw5WOrYnnPa67i35kjesj
-zB43bue3/sQSxql4fAS5hfBv6QUr3/0PmbrcXOWMsgGYuu8Rj+p3JQDQmRIuJPBM
-IkwSyDFCV9DzzGts3bw1MiroTGsgwMDaRWNKJQ53fzYIm229OBMvGBMchOQSbi+i
-FcpDLT+/hUljDw0kUfiMlt8dRaQO6B5ufjWxR+NsIqpEaJN1tcoKazHeb7i5qvsm
-Le2pSjCR9iWqgNajhG4tUR/MblC/xGnTffaTHxuqBA6zZH/4TRnHVnNRKgVj0rax
-CP+JqlDDHe/eX14hrjha
-=qpER
+iQIcBAEBCAAGBQJSJ14dAAoJEDuWpXgki9wHoQcP/RoMmKOSIvTm208q+3wKswX0
+XCNmmXUAJA/ghLHihMM8coLYZpvoJxeky7/CVg3zncKNTpECaVCnBpGmhzH0Iyjc
+PDictrQ53WhdcMV2pUbpo7B/jfYCry3GY052QwxDI5oNO1rHwUdBML5L8HMnfesZ
+OZMlyVDPbeamhNGBzKrfWvr4RVhGhhNYv7C52OJoWEUQKusltl7XQAZ2ZU2Z8L5a
+StTYdNEyMgwj8BS/rvJoN2nAyurYcISDhQt0rCNOw5qQBHfV4LSFFF0qG5ay6YFb
+R31aZ1t1N9Wwasb80aT5oj8jWPgqKBb9HnBcqrta1jYVpLpT0KYKaDZX/kMfBxGF
+IZmq5D4xR6cu7lA22s4/BAczED2KfMeJN7c2K4dgF7GDbU6aNC6z4VJIyNYO9R50
+UkdMnY8PHQXhGaNeMVV7H0pbHVWOdYFtJuhgmRCmLsTfQlykuTqDxcbR7DGIAtJs
+vG3wXJfIXhvvQ80DA4CCR2xUjJzSDfY7/r8w95H7k4SiyeX7DLTSGEjxjyth0DbS
+Uot/B0FQR0jj9ssZhpKcsa47dil3F9XNbT0a+rQIpavOcPz1Kyt0DkrskbZOBkNa
+ual0gHY18OUdc+qZG1REckdFm4LhiCkasRoSPfyRA6Wt4mpQ/FXz4BBSu+Bt5+En
+1UA3W/gQvgBzxtaPStWU
+=uXQs
 -----END PGP SIGNATURE-----
