@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-video/mplayer2/ChangeLog,v 1.94 2013/04/27 17:47:58 scarabeus Exp $
 
+*mplayer2-2.0_p20130428-r1 (04 Sep 2013)
+
+  04 Sep 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +mplayer2-2.0_p20130428-r1.ebuild, -mplayer2-2.0_p20130126.ebuild:
+  Update to latest upstream ebuild.
+
   16 May 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
   +mplayer2-2.0_p20130126.ebuild, +files/generate-tarball.sh,
   +files/mplayer2-giflib5.patch, +files/mplayer2-py2compat.patch,
